--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "angular-mocks": "~1.4.2",
     "angular-resource": "~1.4.3",
-    "ion-gallery": "*"
+    "ion-gallery": "*",
+    "ngmap": "~1.9.0",
+    "angular-timer": "~1.3.3"
   }
 }
