--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.0.1",
-    "angular-qrcode": "~6.0.3"
+    "angular-qrcode": "~6.0.3",
+    "satellizer": "~0.11.3"
   },
   "dependencies": {
     "angular-mocks": "~1.4.2",
